all catalog UIs added
